--- a/projects/Hadoop.html
+++ b/projects/Hadoop.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Bigdata Analytics using Hadoop</title>
+    <title>Big Data Analytics with Hadoop</title>
     <meta content="" name="descriptison">
     <meta content="" name="keywords">
 
@@ -61,7 +61,7 @@
             <div class="container" data-aos="fade-up">
 
                 <div class="section-title">
-                    <h2>Bigdata Analytics using Hadoop</h2>
+                    <h2>Big Data Analytics with Hadoop</h2>
                     <br>
                     <div class="row" style="text-align: center;">
                         <div class="col-lg-10" style="margin: auto;">
@@ -70,147 +70,97 @@
                             </a>
                             <p style="font-style: italic; text-align: left;">November, 2018</p><br>
                             <h4>
-                                <p style="text-align: left;">Implementation of Competitor's Product Change
-                                    Dashboards using Hadoop / Big Data.</p>
+                                <p style="text-align: left;">Competitor Product Change Dashboards.</p>
                             </h4>
                             <h4>
-                                <p style="text-align: left;">Applicable to all processes operating in any data
-                                    domain and facing data volume, data velocity, or data variety troubles</p>
+                                <p style="text-align: left;">Implemented competitor product change dashboards using 
+                                    Hadoop-based big data solutions for a leading UK-based electronic components 
+                                    manufacturer and distributor operating across 32 countries. 
+                                    The solution addressed challenges in managing massive monthly 
+                                    data volumes (6+ billion records), delivering actionable competitive 
+                                    intelligence for pricing and inventory strategies at a global scale.</p>
                             </h4>
                             <br>
                             <img src="../assets/img/bigdata_analytics.png" alt="" width="50%" height="50%"><br>
                             <br>
                             <h1 style="text-align: left;">Description</h1>
                             <h4>
-                                <p style="text-align: left; font-family: sans-serif;">The client, a leading U.K.-based
-                                    electronic components manufacturer and distributor operating in 32 countries,
-                                    wanted to track its competitors’ product pricing to strategize its new and old
-                                    product lines.</p>
+                                <p style="text-align: left; font-family: sans-serif;">The client sought to efficiently analyze competitors’ 
+                                    pricing trends to support new and existing product lines. They faced:</p>
                             </h4>
                             <h4>
-                                <p style="text-align: left;">It faced challenges while processing
-                                    its monthly data volume (6 billion+ records), and also required
-                                    support for building effective and time-sensitive competitive intelligence
-                                    dashboards for all global competitors.</p>
+                                <p style="text-align: left;">Large-scale data processing challenges due to high data volume, velocity, and variety.</p>
                             </h4>
                             <h4>
-                                <p style="text-align: left;">It wanted to develop a holistic
-                                    Business Intelligence (BI) solution for middle and executive management,
-                                    and reduce the lead time for publishing reports, to analyze trends using its
-                                    historical data along with price changing products and entire product categories.
+                                <p style="text-align: left;">Manual, time-intensive data handling.
                                 </p>
                             </h4>
                             <h4>
-                                <p style="text-align: left;">It wanted to perform competitive analysis on KPIs like
-                                    price change, stock status, inventory, trend and matched articles with prominent
-                                    competitors
-                                    in the global market. The client’s existing technical architecture was incapable of
-                                    effectively addressing these limitations.</p>
+                                <p style="text-align: left;">Limitations in their existing BI architecture, which hindered timely and holistic reporting on global competitor KPIs (price changes, inventory, trends, and matched articles).</p>
                             </h4>
                             <br>
-                            <h1 style="text-align: left;">Challenges</h1>
-                            <h4>
-                                <p style="text-align: left;">The key challenges faced in this process were:</p>
-                            </h4>
+                            <h1 style="text-align: left;">Key Challenges</h1>
                             <ol>
                                 <h4>
-                                    <li style="text-align: left;">Time-consuming and manual data processing.</li>
+                                    <li style="text-align: left;">Manual and slow data processing.</li>
                                 </h4>
                                 <h4>
-                                    <li style="text-align: left;">Difficulty in analyzing trends using
-                                        historical data, along with changing prices and product categories.</li>
+                                    <li style="text-align: left;">Difficulty in executing competitive analysis with massive, diverse data sets.</li>
                                 </h4>
                                 <h4>
-                                    <li style="text-align: left;">Difficulty in performing
-                                        competitive analysis due to huge data size.</li>
+                                    <li style="text-align: left;">Inability to quickly analyze historical trends involving price and product category changes.</li>
                                 </h4>
                                 <h4>
-                                    <li style="text-align: left;">Inability to match ETAs.</li>
+                                    <li style="text-align: left;">Complications in meeting critical deadlines (ETAs).</li>
                                 </h4>
                             </ol>
                             <br>
-                            <h1 style="text-align: left;">Solution</h1>
+                            <h1 style="text-align: left;">Solution Highlights</h1>
                             <h4>
-                                <p style="text-align: left;">With the aim of reducing the end-to-end
-                                    time spent on manual and time-consuming activities in the Operations team.</p>
-                            </h4>
-                            <h4>
-                                <p style="text-align: left;">I designed and deployed 6 nodes Hadoop cluster for data
-                                    ingestion and data processing with 20 cores horsepower, 150GB RAM, and 2TB storage.
+                                <p style="text-align: left;">Designed and deployed a 6-node Hadoop cluster (20 cores, 150GB RAM, 2TB storage) for scalable data ingestion and processing.
                                 </p>
                             </h4>
                             <h4>
-                                <p style="text-align: left;">Earlier, because of technology incompetency,
-                                    it wasn’t feasible to process the data crawled for 6 months, this was solved
-                                    by storing all data into Hive tables in an optimized row columnar format and
-                                    using Apache Pig language for business logic and calculations.</p>
+                                <p style="text-align: left;">Transitioned data storage to optimized Hive tables in row-columnar format, enabling efficient retrieval and analysis.</p>
                             </h4>
                             <h4>
-                                <p style="text-align: left;">This simplified extremely complex ETL
-                                    (extract transform and load) processes by integrating data and logic
-                                    from multiple systems using Hadoop.</p>
+                                <p style="text-align: left;">Developed business logic and ETL workflows using Apache Pig to integrate and automate data processing across multiple systems.</p>
                             </h4>
                             <h4>
-                                <p style="text-align: left;">The entire process was automated from
-                                    the data extraction layer to the end-user consumption layer.</p>
+                                <p style="text-align: left;">Automated end-to-end workflows, from raw data extraction through to interactive reporting.</p>
                             </h4>
                             <h4>
-                                <p style="text-align: left;">My counterpart BI team also deployed
-                                    interactive Tableau dashboards, which use Hive-aggregated data sources
-                                    for known questions with an ad-hoc ability to pose new questions.</p>
+                                <p style="text-align: left;">Collaborated with BI teams to implement Tableau dashboards driven by real-time Hive-aggregated datasets, offering actionable, ad-hoc insights.</p>
                             </h4>
                             <br>
-                            <h1 style="text-align: left;">Benefits</h1>
-                            <h4>
-                                <p style="text-align: left;">Efforts in designing and implementing this solution led to:
-                                </p>
-                            </h4>
+                            <h1 style="text-align: left;">Results & Impact</h1>
                             <ol>
                                 <h4>
-                                    <li style="text-align: left;">Save $150K cost of data
-                                        processing,
-                                        storage and analytics.</li>
+                                    <li style="text-align: left;">Reduced dashboard and data processing turnaround time by 83%.</li>
                                 </h4>
                                 <h4>
-                                    <li style="text-align: left;">Reduced TAT by 83% in dashboard
-                                        creation and data processing.</li>
+                                    <li style="text-align: left;">Deployed a scalable Pricing Data Warehouse managing 12+ million inventory items and 43 competitors globally.</li>
                                 </h4>
                                 <h4>
-                                    <li style="text-align: left;">Pricing Data Warehouse was set
-                                        up for more than 12 million inventory items for about 43 global competitors per
-                                        month.</li>
+                                    <li style="text-align: left;">Enabled analysis of 6 months of competitor data (~6 billion records) at an inventory level - previously unmanageable with traditional RDBMS.</li>
                                 </h4>
                                 <h4>
-                                    <li style="text-align: left;">Hadoop data processing solution
-                                        enabled processing competitor data for 6 months with an inventory-level data of
-                                        approx. ~6 billion, which is otherwise time consuming with traditional
-                                        relational
-                                        database management system like SQL Server.</li>
+                                    <li style="text-align: left;">Decreased report generation lead time from 3 weeks to just 1 day.</li>
                                 </h4>
                                 <h4>
-                                    <li style="text-align: left;">Lead time for report generation
-                                        and strategy was reduced from 3 weeks to 1 day for reports and dashboards.</li>
+                                    <li style="text-align: left;">Batch processing now supports all global markets (including DE, FR, GB, IT, JP, CN) simultaneously.</li>
                                 </h4>
                                 <h4>
-                                    <li style="text-align: left;">Enabled processing data for all
-                                        global markets like DE, FR, GB, IT, FR, JP, CN, etc. at once in batches,
-                                        which wasn’t feasible otherwise.</li>
+                                    <li style="text-align: left;">Automated workflows saved approximately 3 weeks of manual effort monthly.</li>
                                 </h4>
                                 <h4>
-                                    <li style="text-align: left;">Saved ~3 weeks of manual
-                                        efforts per month.</li>
+                                    <li style="text-align: left;">Improved process efficiency by 99% and eliminated dependence on manual file processing.</li>
                                 </h4>
                                 <h4>
-                                    <li style="text-align: left;">Improved process efficiency by
-                                        99%.</li>
+                                    <li style="text-align: left;">Achieved $150K annual savings on data processing, storage, and analytics.</li>
                                 </h4>
                                 <h4>
-                                    <li style="text-align: left;">Saved 2 FTEs [Full time
-                                        employees by automation].</li>
-                                </h4>
-                                <h4>
-                                    <li style="text-align: left;">Removed human dependence
-                                        on file processing.</li>
+                                    <li style="text-align: left;">Freed up 2 FTEs [full time employeess] through automation.</li>
                                 </h4>
                             </ol>
 
