hadoop.html final

--- a/projects/Hadoop.html
+++ b/projects/Hadoop.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <title>Big Data Analytics with Hadoop</title>
-    <meta content="" name="descriptison">
+    <meta content="" name="description">
     <meta content="" name="keywords">
 
     <!-- Favicons -->
@@ -32,6 +32,7 @@
         body {
             font-family: sans-serif;
         }
+
         h4 {
             font-family: sans-serif;
         }
@@ -66,18 +67,18 @@
                     <div class="row" style="text-align: center;">
                         <div class="col-lg-10" style="margin: auto;">
                             <a href="../index.html">
-                                <h3 style="text-align: left;">Rijul_Sahu</h1>
+                                <h3 style="text-align: left;">Rijul_Sahu</h3>
                             </a>
                             <p style="font-style: italic; text-align: left;">November, 2018</p><br>
-                            <h4>
+                            <h3>
                                 <p style="text-align: left;">Competitor Product Change Dashboards.</p>
-                            </h4>
+                            </h3>
                             <h4>
-                                <p style="text-align: left;">Implemented competitor product change dashboards using 
-                                    Hadoop-based big data solutions for a leading UK-based electronic components 
-                                    manufacturer and distributor operating across 32 countries. 
-                                    The solution addressed challenges in managing massive monthly 
-                                    data volumes (6+ billion records), delivering actionable competitive 
+                                <p style="text-align: left;">Implemented competitor product change dashboards using
+                                    Hadoop-based big data solutions for a leading UK-based electronic components
+                                    manufacturer and distributor operating across 32 countries.
+                                    The solution addressed challenges in managing massive monthly
+                                    data volumes (6+ billion records), delivering actionable competitive
                                     intelligence for pricing and inventory strategies at a global scale.</p>
                             </h4>
                             <br>
@@ -85,84 +86,104 @@
                             <br>
                             <h1 style="text-align: left;">Description</h1>
                             <h4>
-                                <p style="text-align: left; font-family: sans-serif;">The client sought to efficiently analyze competitors’ 
-                                    pricing trends to support new and existing product lines. They faced:</p>
+                                <p style="text-align: left; font-family: sans-serif;">The client sought to efficiently
+                                    analyze competitors
+                                    pricing trends to support new and existing product lines.</p>
                             </h4>
                             <h4>
-                                <p style="text-align: left;">Large-scale data processing challenges due to high data volume, velocity, and variety.</p>
+                                <p style="text-align: left; font-family: sans-serif;">They faced:</p>
                             </h4>
-                            <h4>
-                                <p style="text-align: left;">Manual, time-intensive data handling.
-                                </p>
-                            </h4>
-                            <h4>
-                                <p style="text-align: left;">Limitations in their existing BI architecture, which hindered timely and holistic reporting on global competitor KPIs (price changes, inventory, trends, and matched articles).</p>
-                            </h4>
+                            <ul style="text-align: left;">
+                                <li>
+                                    <h4>Large-scale data processing challenges due to high data volume, velocity, and
+                                        variety.</h4>
+                                </li>
+                                <li>
+                                    <h4>Manual, time-intensive data handling.</h4>
+                                </li>
+                                <li>
+                                    <h4>Limitations in their existing BI architecture, which hindered timely and
+                                        holistic reporting on global competitor KPIs (price changes, inventory, trends,
+                                        and matched articles).</h4>
+                                </li>
+                            </ul>
                             <br>
                             <h1 style="text-align: left;">Key Challenges</h1>
-                            <ol>
-                                <h4>
-                                    <li style="text-align: left;">Manual and slow data processing.</li>
-                                </h4>
-                                <h4>
-                                    <li style="text-align: left;">Difficulty in executing competitive analysis with massive, diverse data sets.</li>
-                                </h4>
-                                <h4>
-                                    <li style="text-align: left;">Inability to quickly analyze historical trends involving price and product category changes.</li>
-                                </h4>
-                                <h4>
-                                    <li style="text-align: left;">Complications in meeting critical deadlines (ETAs).</li>
-                                </h4>
-                            </ol>
+                            <ul style="text-align: left;">
+                                <li>
+                                    <h4>Manual and slow data processing.</h4>
+                                </li>
+                                <li>
+                                    <h4>Difficulty in executing competitive analysis with massive, diverse data sets.
+                                    </h4>
+                                </li>
+                                <li>
+                                    <h4>Inability to quickly analyze historical trends involving price and product
+                                        category changes.</h4>
+                                </li>
+                                <li>
+                                    <h4>Complications in meeting critical deadlines (ETAs).</h4>
+                                </li>
+                            </ul>
                             <br>
                             <h1 style="text-align: left;">Solution Highlights</h1>
-                            <h4>
-                                <p style="text-align: left;">Designed and deployed a 6-node Hadoop cluster (20 cores, 150GB RAM, 2TB storage) for scalable data ingestion and processing.
-                                </p>
-                            </h4>
-                            <h4>
-                                <p style="text-align: left;">Transitioned data storage to optimized Hive tables in row-columnar format, enabling efficient retrieval and analysis.</p>
-                            </h4>
-                            <h4>
-                                <p style="text-align: left;">Developed business logic and ETL workflows using Apache Pig to integrate and automate data processing across multiple systems.</p>
-                            </h4>
-                            <h4>
-                                <p style="text-align: left;">Automated end-to-end workflows, from raw data extraction through to interactive reporting.</p>
-                            </h4>
-                            <h4>
-                                <p style="text-align: left;">Collaborated with BI teams to implement Tableau dashboards driven by real-time Hive-aggregated datasets, offering actionable, ad-hoc insights.</p>
-                            </h4>
+                            <ul style="text-align: left;">
+                                <li>
+                                    <h4>Designed and deployed a 6-node Hadoop cluster (20 cores, 150GB RAM, 2TB storage)
+                                        for scalable data ingestion and processing.</h4>
+                                </li>
+                                <li>
+                                    <h4>Transitioned data storage to optimized Hive tables in row-columnar format,
+                                        enabling efficient retrieval and analysis.</h4>
+                                </li>
+                                <li>
+                                    <h4>Developed business logic and ETL workflows using Apache Pig to integrate and
+                                        automate data processing across multiple systems.</h4>
+                                </li>
+                                <li>
+                                    <h4>Automated end-to-end workflows, from raw data extraction through to interactive
+                                        reporting.</h4>
+                                </li>
+                                <li>
+                                    <h4>Collaborated with BI teams to implement Tableau dashboards driven by real-time
+                                        Hive-aggregated datasets, offering actionable, ad-hoc insights.</h4>
+                                </li>
+                            </ul>
                             <br>
                             <h1 style="text-align: left;">Results & Impact</h1>
-                            <ol>
-                                <h4>
-                                    <li style="text-align: left;">Reduced dashboard and data processing turnaround time by 83%.</li>
-                                </h4>
-                                <h4>
-                                    <li style="text-align: left;">Deployed a scalable Pricing Data Warehouse managing 12+ million inventory items and 43 competitors globally.</li>
-                                </h4>
-                                <h4>
-                                    <li style="text-align: left;">Enabled analysis of 6 months of competitor data (~6 billion records) at an inventory level - previously unmanageable with traditional RDBMS.</li>
-                                </h4>
-                                <h4>
-                                    <li style="text-align: left;">Decreased report generation lead time from 3 weeks to just 1 day.</li>
-                                </h4>
-                                <h4>
-                                    <li style="text-align: left;">Batch processing now supports all global markets (including DE, FR, GB, IT, JP, CN) simultaneously.</li>
-                                </h4>
-                                <h4>
-                                    <li style="text-align: left;">Automated workflows saved approximately 3 weeks of manual effort monthly.</li>
-                                </h4>
-                                <h4>
-                                    <li style="text-align: left;">Improved process efficiency by 99% and eliminated dependence on manual file processing.</li>
-                                </h4>
-                                <h4>
-                                    <li style="text-align: left;">Achieved $150K annual savings on data processing, storage, and analytics.</li>
-                                </h4>
-                                <h4>
-                                    <li style="text-align: left;">Freed up 2 FTEs [full time employeess] through automation.</li>
-                                </h4>
-                            </ol>
+                            <ul style="text-align: left;">
+                                <li>
+                                    <h4>Reduced dashboard and data processing turnaround time by 83%.</h4>
+                                </li>
+                                <li>
+                                    <h4>Deployed a scalable Pricing Data Warehouse managing 12+ million inventory items
+                                        and 43 competitors globally.</h4>
+                                </li>
+                                <li>
+                                    <h4>Enabled analysis of 6 months of competitor data (~6 billion records) at an
+                                        inventory level - previously unmanageable with traditional RDBMS.</h4>
+                                </li>
+                                <li>
+                                    <h4>Decreased report generation lead time from 3 weeks to just 1 day.</h4>
+                                </li>
+                                <li>
+                                    <h4>Batch processing now supports all global markets (including DE, FR, GB, IT, JP,
+                                        CN) simultaneously.</h4>
+                                </li>
+                                <li>
+                                    <h4>Automated workflows saved approximately 3 weeks of manual effort monthly.</h4>
+                                </li>
+                                <li>
+                                    <h4>Improved process efficiency by 99% and eliminated dependence on manual file
+                                        processing.</h4>
+                                </li>
+                                <li>
+                                    <h4>Achieved $150K annual savings on data processing, storage, and analytics.</h4>
+                                </li>
+                                <li>
+                                    <h4>Freed up 2 FTEs [full time employees] through automation.</h4>
+                                </li>
+                            </ul>
 
                         </div>
                     </div>
